# mimc-Recursive-MultiAgent-System

./: README.md  pyproject.toml  rmas_architecture.html
rmas/: __init__.py  config.py  orchestrator.py  state.py
rmas/agents/: __init__.py  factory.py  prompts.py
rmas/patterns/: __init__.py  deliberation.py  distillation.py  mixture.py  sequential.py
rmas_official_bridge/: __init__.py  config.py  main.py  orchestrator.py  state.py
rmas_official_bridge/agents/: __init__.py  factory.py
rmas_official_bridge/patterns/: __init__.py  deliberation.py  distillation.py  mixture.py  sequential.py
