[project]
name = "rmas"
version = "0.1.0"
description = "Recursive Multi-Agent System — implementation of arXiv:2604.25917v1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.2",
    "duckduckgo-search>=8.1.1",
    "tavily-python>=0.5.0",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.1.0",
    "langgraph>=1.1.10",
    "pdfplumber>=0.11.9",
    "playwright>=1.59.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.0",
    "rich>=15.0.0",
]
